updated resolving assignments
